# jack-drop

./: .gitattributes  README.md
backend/chat/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/chat/chat/: start.sh
backend/chat/chat/chat/: settings.py
backend/chat/chat/common/: asgi.py  mixins.py  settings.py  urls.py  wsgi.py
backend/chat/chat/common/repositories/: base.py
backend/chat/chat/common/services/: base.py
backend/chat/chat/message/: __init__.py  admin.py  apps.py  config.py  mixins.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/chat/chat/message/consumers/: consumers.py
backend/chat/chat/message/repositories/: messages.py  users.py
backend/chat/chat/message/services/: messages.py  transfer.py  users.py
backend/chat/chat/messages/: apps.py  models.py  serializers.py
backend/chat/chat/messages/consumers/: __init__.py  consumers.py
backend/chat/chat/static/css/: chat.css
backend/chat/chat/templates/: base.html  chat.html  input.html
backend/chat/chat/widget/: urls.py  views.py
backend/chat/nginx/: nginx.conf
backend/products/: .dockerignore  .gitignore  Dockerfile  Dockerfile.celery  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/products/nginx/: nginx.conf
backend/products/products/: dump.json  start.sh  test.py
backend/products/products/bonus/: admin.py  models.py  serializers.py  urls.py
backend/products/products/cases/: actions.py  admin.py  apps.py  config.py  urls.py
backend/products/products/categories/: admin.py
backend/products/products/common/: admin.py  apps.py  asgi.py  celery.py  devsettings.py  settings.py  urls.py
backend/products/products/games/: admin.py  models.py  urls.py
backend/products/products/interactive/: auth.py  routing.py  urls.py  views.py
backend/products/products/inventory/: admin.py  models.py  serializers.py
backend/products/products/items/: admin.py  apps.py  config.py  items.py  serializers.py
backend/products/products/lottery/: admin.py  apps.py  serialized.py  tasks.py
backend/products/products/market/: admin.py  apps.py  config.py  items.py
backend/products/products/refresher/: admin.py  apps.py  models.py  tasks.py
backend/products/products/templates/: cases.html  main.html
backend/products/products/wheel/: apps.py
backend/users/: .dockerignore  .flake8  Dockerfile  Dockerfile.celery  docker-compose.yml  pyproject.toml  requirements.txt
backend/users/nginx/: nginx.conf
backend/users/users/: start.sh
backend/users/users/accounts/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/users/users/balances/: admin.py  apps.py  models.py  serializers.py  urls.py
backend/users/users/common/: celery.py  mixins.py  repositories.py  services.py  settings.py  urls.py  wsgi.py
backend/users/users/promocodes/: admin.py  config.py  models.py  serializers.py  urls.py
backend/users/users/referrals/: admin.py  config.py  serializers.py
(+497 files in other folders)
