[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Bogdan Loginov <bogdanloginov31@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
