[tool.poetry]
name = "products"
version = "0.1.0"
description = "Microservice for products"
authors = ["Bogdan Loginov <bogdanloginov31@gmail.com>"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
